--- a/docs/src/main/asciidoc/includes/guides/performance-tuning.adoc
+++ b/docs/src/main/asciidoc/includes/guides/performance-tuning.adoc
@@ -44,6 +44,7 @@ server:
   idle-connection-period: PT2M  # Check idle connections every 2 minutes
   idle-connection-timeout: PT5M # Close connections that have been idle for 5 minutes
   max-concurrent-requests: NNNN # Maximum number of concurrent requests. -1 is unlimited.
+  max-requests-per-second: NNNN # Maximum throughput of requests over a one-second duration. -1 is unlimited.
   max-tcp-connections: NNNN     # Max number of concurrent tcp connections. -1 is unlimited.
   max-in-memory-entity: NNNNNN  # Entities smaller than this are buffered in memory vs streamed (bytes)
   max-payload-size: NNNNNNN     # Reject requests with payload sizes greater than this. -1 is unlimited (bytes)
